--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     display: flex; 
-    justify-content: center;
     font-family: sans-serif;
+    flex-direction: column; 
+    align-items: center;
 }
 
 header {
     font-size: 3.4em; 
-    margin-top: 1.5em;
+    margin: 1.5em 0;
 }
