--- a/style.css
+++ b/style.css
@@ -9,3 +9,23 @@ header {
     font-size: 2.5em; 
     margin: 1.5em 0;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#clear-grid {
+    font-size: 1.4em;
+    margin: 1.5em 0;
+    border: 0.1em solid hsl(0, 0%, 0%);
+    background-color: hsl(0, 100%, 100%);
+    padding: 0.2em 1.7em;
+    transition: all ease-out 100ms;
+}
+
+#clear-grid:hover {
+    background-color: hsl(0, 0%, 0%);
+    color: hsl(0, 100%, 100%);
+}
