--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ main {
     align-items: center;
 }
 
-#clear-grid {
+.option-btn {
     font-size: 1.4em;
     margin: 1.5em 0;
     border: 0.1em solid hsl(0, 0%, 0%);
@@ -25,7 +25,7 @@ main {
     transition: all ease-out 100ms;
 }
 
-#clear-grid:hover {
+.option-btn:hover {
     background-color: hsl(0, 0%, 0%);
     color: hsl(0, 100%, 100%);
 }
