--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 header {
     font-size: 2.5em; 
     margin: 0.7em 0;
+    font-weight: bold;
 }
 
 main {
@@ -17,12 +18,13 @@ main {
 }
 
 .option-btn {
-    font-size: 1.4em;
-    margin: 1.5em 0;
-    border: 0.1em solid hsl(0, 0%, 0%);
+    font-size: 1.2em;
+    margin: 1.3em 0;
+    border: 0.13em solid hsl(0, 0%, 0%);
     background-color: hsl(0, 100%, 100%);
     padding: 0.2em 1.7em;
     transition: all ease-out 100ms;
+    font-weight: normal;
 }
 
 .option-btn:hover {
